package com.zzaip.monopoly.game_logic.field;

public enum FieldType {
    PROPERTY,
    JAIL,
    START,
    NEUTRAL
}